# storygenerator

./: README.md  pyproject.toml
drawyourstory/: createstory.py  story_app.py
